<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Game Hub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">sign up</string>
    <string name="register">New to us?</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="new_item">Name</string>
    <string name="forgott_pass">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="warning1">Please enter your email</string>
    <string name="warning2">Please enter your password</string>
    <string name="warning3">Please enter your first name</string>
    <string name="warning4">Please enter your last name</string>
    <string name="warning5">Invalid email format</string>
    <string name="warning6">Please enter password again</string>
    <string name="warning7">Password did not match</string>
    <string name="success">Successfully saved</string>
    <string name="forget" />
    <string name="reset" />
    <string name="close" />
    <string name="sent" />
    <string name="loading">Loading…</string>
    <string name="filter">Filter</string>
    <string name="choose_wanted_categories">Choose wanted categories</string>
    <string name="mark_all">Mark all</string>
    <string name="clear_all">Clear all</string>
    <string name="type1">Best rated</string>
    <string name="type2">Bellow 50$</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="add_all">Add all</string>
    <string name="search">Search</string>
    <string name="enter_item_title">Enter item title</string>
    <string name="pick_image">Pick image</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="Pick_date">pick date</string>
    <string name="finish">Click to finish</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="min">Minimun price</string>
    <string name="max">Maximum price</string>
    <string name="game_image">Game image</string>
    <string name="released">Released</string>
    <string name="game_name">Game name</string>
    <string name="buy">Buy</string>
    <string name="to_the_wishlist">To the wishlist</string>
    <string name="add_clear_all">Add/Clear items from API</string>
    <string name="see_and_edit">See/Edit items from Firebase</string>
    <string name="admin_page">Admin page</string>
    <string name="remove_duplicates">Remove duplicates</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="there_must_be_at_least_one_game">there must be at least one game</string>
    <string name="the_game_must_have_name">the game must have name</string>
    <string name="error">error</string>
    <string name="are_you_sure_you_want_the_game_to_cost_0">Are you sure you want the game to cost 0 $ ?</string>
    <string name="check">Check</string>
    <string name="setting_default_image">setting default image</string>
    <string name="release_today">release today</string>
    <string name="volley_sample_fail">Volley Sample Fail</string>
</resources>