<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="51" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrowback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:layout_margin="30dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="227dp"
            android:layout_height="123dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:src="@drawable/text_logo"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_tab"
        android:layout_width="275dp"
        android:layout_height="320dp"
        android:background="@drawable/white_rectangle"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/linoleo"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".19" />

            <EditText
                android:id="@+id/fName"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.31"
                android:background="@drawable/signup_textview"
                android:drawablePadding="8dp"
                android:hint="@string/first_name"
                android:padding="8dp"
                android:textColorHint="@color/black_trans"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/lName"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.31"
                android:background="@drawable/signup_textview"
                android:drawablePadding="8dp"
                android:hint="@string/last_name"
                android:padding="8dp"
                android:textColorHint="@color/black_trans"
                android:textSize="12sp"
                android:importantForAutofill="no"
                tools:ignore="TextFields" />

        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/signup_textview"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:padding="8dp"
            android:textColorHint="@color/black_trans"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/signup_textview"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColorHint="@color/black_trans"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/cnfPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/signup_textview"
            android:drawablePadding="8dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColorHint="@color/black_trans"
            android:textSize="12sp" />


        <Button
            android:id="@+id/signBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/button_color"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="324" />
</LinearLayout>