<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".Add_ItemFragment">

    <LinearLayout
        android:id="@+id/login_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rectangle"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Enter item title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_title" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/image_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/packman_orange"
            android:text="@string/pick_image"
            app:cornerRadius="30dp" />

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/pick_image"
            android:src="@mipmap/ic_launcher" />

        <!-- Rating -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rating2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rating" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Price -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Quantity -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Pick date -->
        <Button
            android:id="@+id/date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/packman_orange"
            android:text="@string/Pick_date"
            app:cornerRadius="30dp" />

        <!-- Finish adding -->
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/finish" />
    </LinearLayout>
</ScrollView>