<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="51" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/text_logo" />

    <LinearLayout
        android:id="@+id/login_tab"
        android:layout_width="275dp"
        android:layout_height="300dp"
        android:background="@drawable/white_rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/linoleo"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameLoginET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/signup_textview"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:padding="10dp"
            android:textColorHint="@color/black_trans"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/passwordLoginET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/signup_textview"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/black_trans"
            android:textSize="12sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/button_color"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/register"
                android:textColor="@color/button_color"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="324" />

</LinearLayout>